# drf-internal-cookiecutter

./: .env.sample  .flake8  .gitignore  CODE_OF_CONDUCT.md  LICENSE  coverage.xml  docker-compose.yml  manage.py  passenger_wsgi.py  pyproject.toml  readme.md  requirements-dev.txt  schema.yml
.github/workflows/: codecov.yaml
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_initial.py
accounts/tests/endpoints/: test_groups.py  test_logs.py  test_permissions.py  test_profiles.py  test_userdevices.py  test_users.py
accounts/tests/models/: test_models.py
accounts/tests/serializers/: test_profile.py  test_user.py
authentication/: admin.py  apps.py  backends.py  gateways.py  models.py  serializers.py  signals.py  throttling.py  urls.py  views.py
authentication/helpers/: device_helper.py  ip_utils.py  login_helper.py  otp_helper.py
authentication/migrations/: 0001_initial.py
authentication/tests/backends/: test_jwt.py  test_temptoken.py
authentication/tests/endpoints/: test_auth.py
authentication/tests/helpers/: test_iputils.py  test_loginhelper.py
core/: admin.py  apps.py  middleware.py  models.py  pagination.py  permissions.py  schema.py  serializers.py  validators.py  views.py
core/helpers/: email_utils.py
core/management/commands/: applymigrations.py  loadfakedata.py  startup.py  wait_for_db.py
core/migrations/: 0001_initial.py
core/templates/emails/: welcome.html  (+2 more)
docker/: Dockerfile
mainbrain/: .env.sample  asgi.py  urls.py  wsgi.py
mainbrain/settings/: base.py  dev.py  prod.py
(+6 files in other folders)
