[tool.poetry]
name = "drf-internal-cookiecutter"
version = "0.1.0"
description = "A Production ready project that aims to kickstart building API based internal tools for business."
authors = ["Rakanhf <rakanfarhouda@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-decouple = "^3.8"
django = "4.2.4"
django-auditlog = "^2.3.0"
django-cors-headers = "^4.3.1"
django-filter = "^23.5"
django-formtools = "^2.5.1"
django-otp = "^1.3.0"
django-phonenumber-field = "^7.3.0"
django-rest-passwordreset = "^1.4.0"
django-two-factor-auth = "^1.16.0"
django-user-agents = "^0.4.0"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.1"
drf-spectacular = "^0.27.1"
faker = "^23.2.1"
qrcode = "^7.4.2"
twilio = "^8.13.0"
requests = "^2.31.0"
colorama = "^0.4.6"
coverage = "^7.4.2"
black = "^24.2.0"
isort = "^5.13.2"
psycopg = "^3.1.18"
drf-standardized-errors = "^0.12.6"
phonenumbers = "^8.13.30"
pillow = "^10.2.0"
typing-extensions = "^4.9.0"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 88
include = '\.pyi?$'  
exclude = '''
/(
    \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | build
    | dist
)/
'''
skip-string-normalization = true

[tool.isort]
profile = "black"